--- a/LoggerService/LoggerService.csproj
+++ b/LoggerService/LoggerService.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataAbstraction\DataAbstraction.csproj" />
+    <ProjectReference Include="..\DataAbstraction\Data.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
