--- a/HH.ApplicationServices/HH.ApplicationServices.csproj
+++ b/HH.ApplicationServices/HH.ApplicationServices.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HH.Data.Abstractions\HH.Data.Abstractions.csproj" />
     <ProjectReference Include="..\HH.Infrastructure\HH.Infrastructure.csproj" />
   </ItemGroup>
