--- a/HH.ApplicationServices/HH.ApplicationServices.csproj
+++ b/HH.ApplicationServices/HH.ApplicationServices.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HH.Data.Abstractions\HH.Data.Abstractions.csproj" />
+    <ProjectReference Include="..\HH.Identity\HH.Identity.csproj" />
     <ProjectReference Include="..\HH.Infrastructure\HH.Infrastructure.csproj" />
   </ItemGroup>
 
