--- a/HH.Core/HH.Core.csproj
+++ b/HH.Core/HH.Core.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\HH.DTO\HH.DTO.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.9" />
+  </ItemGroup>
+
 </Project>
