--- a/HH.Api/appsettings.json
+++ b/HH.Api/appsettings.json
@@ -9,5 +9,14 @@
   "ConnectionStrings": {
     "sqlConnection": "Server=(localdb)\\MSSQLLocalDB; database=EmployeeVacancy; Integrated Security=true"
   },
+  "ConnectionStringsIdentity": {
+    "sqlConnectionIdentity": "Server=(localdb)\\MSSQLLocalDB; database=IdentityDb; Integrated Security=true"
+  },
+  "JWT": {
+    "Key": "C1CF4B7DC4C4175B6618DE4F55CA4",
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser",
+    "DurationInMinutes": 1
+  },
   "AllowedHosts": "*"
 }
