Add registration and role

--- a/HH.Api/appsettings.json
+++ b/HH.Api/appsettings.json
@@ -7,9 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Server=(localdb)\\MSSQLLocalDB; database=EmployeeVacancy; Integrated Security=true"
-  },
-  "ConnectionStringsIdentity": {
+    "sqlConnection": "Server=(localdb)\\MSSQLLocalDB; database=EmployeeVacancy; Integrated Security=true",
     "sqlConnectionIdentity": "Server=(localdb)\\MSSQLLocalDB; database=IdentityDb; Integrated Security=true"
   },
   "JWT": {
