--- a/HH.Identity/HH.Identity.csproj
+++ b/HH.Identity/HH.Identity.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="5.0.8" />
       <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="5.0.9" />
       <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.9" />
     </ItemGroup>
